--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ gitdb==4.0.12
 GitPython==3.1.44
 idna==3.10
 Jinja2==3.1.5
+joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 kiwisolver==1.4.8
@@ -35,13 +36,17 @@ referencing==0.36.2
 requests==2.32.3
 rich==13.9.4
 rpds-py==0.22.3
+scikit-learn==1.6.1
+scipy==1.15.1
 seaborn==0.13.2
 six==1.17.0
 smmap==5.0.2
 streamlit==1.41.1
 tenacity==9.0.0
+threadpoolctl==3.5.0
 toml==0.10.2
 tornado==6.4.2
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
+watchdog==6.0.0
